# wiyata.c

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  README.md  meson.build
.github/workflows/: test.yaml
advent_of_code/: meson.build  not_quite_lisp.c  not_quite_lisp.h  not_quite_lisp_test.c  report_repair.h  report_repair_test.c  rocket_equation.c  rocket_equation.h  rocket_equation_test.c  there_would_be_no_math.c  there_would_be_no_math.h  there_would_be_no_math_test.c
codeforces/: meson.build  reorder.c  reorder.h  reorder_test.c
codewars/: alternate_case.c  alternate_case.h  alternate_case_test.c  bouncing_balls.c  bouncing_balls.h  bouncing_balls_test.c  consecutive_strings.c  consecutive_strings.h  consecutive_strings_test.c  how_much.h  how_much_test.c  maximum_length_difference.h  maximum_length_difference_test.c  meson.build  n-th_power.c  n-th_power.h  n-th_power_test.c  ones_and_zeros.c  ones_and_zeros.h  ones_and_zeros_test.c  reverse_list_recursively.h  reverse_list_recursively_test.c  sorted_yes_no_how.h  sorted_yes_no_how_test.c  string_repeat.h  string_repeat_test.c  who_likes_it.h  who_likes_it_test.c
hacker_rank/: counting_valleys.c  counting_valleys_test.c  meson.build  prime_or_not.c  prime_or_not.h  prime_or_not_test.c
leetcode/: add_two_numbers.c  add_two_numbers.h  add_two_numbers_test.c  best_time_to_buy_and_sell_stock.c  best_time_to_buy_and_sell_stock.h  best_time_to_buy_and_sell_stock_test.c  first_bad_version.c  first_bad_version.h  first_bad_version_test.c  flood_fill.c  flood_fill.h  flood_fill_test.c  longest_substring_test.c  merge_two_sorted_lists.c  merge_two_sorted_lists.h  merge_two_sorted_lists_test.c  meson.build  number_of_islands.c  number_of_islands.h  number_of_islands_test.c  palindrome_number.c  palindrome_number.h  palindrome_number_test.c  reverse_integer.c  reverse_integer_test.c  reverse_linked_list.c  reverse_linked_list.h  reverse_linked_list_test.c  string_to_integer.c  string_to_integer_test.c
lib/: cmocka.wrap
open_kattis/: autori.c  autori.h  autori_test.c  batter_up.h  batter_up_test.c  bijele.c  bijele.h  bijele_test.c  cold_puter_science.h  cold_puter_science_test.c  death_knight_hero.h  death_knight_hero_test.c  faktor.h  faktor_test.c  fizzbuzz.h  fizzbuzz_test.c  herman.c  herman.h  herman_test.c  knapsack.c  knapsack.h  knapsack_test.c  ladder.c  ladder.h  ladder_test.c  meson.build  modulo.c  modulo.h  modulo_test.c  nasty_hacks.c  nasty_hacks.h  nasty_hacks_test.c  number_fun.h  number_fun_test.c  oddities.h  oddities_test.c  planina.c  planina.h  planina_test.c  pot.c  (+29 more)
src/: meson.build
src/advent_of_code/: meson.build  not_quite_lisp.h  report_repair.c  report_repair.h  rocket_equation.c  rocket_equation.h  there_would_be_no_math.c  there_would_be_no_math.h
src/codewars/: alternate_case.c  alternate_case.h  consecutive_strings.c  consecutive_strings.h  how_much.c  how_much.h  maximum_length_difference.c  maximum_length_difference.h  meson.build  n-th_power.c  ones_and_zeros.c  reverse_list_recursively.c  reverse_list_recursively.h  sorted_yes_no_how.c  sorted_yes_no_how.h  string_repeat.c  string_repeat.h  who_likes_it.c
src/hacker_rank/: counting_valleys.c  counting_valleys.h  meson.build  prime_or_not.c
src/leetcode/: add_two_numbers.c  longest_substring.c  longest_substring.h  meson.build  reverse_integer.h  string_to_integer.c  string_to_integer.h
src/open_kattis/: autori.c  autori.h  batter_up.c  batter_up.h  bijele.c  bijele.h  cold_puter_science.c  cold_puter_science.h  death_knight_hero.c  death_knight_hero.h  faktor.c  faktor.h  fizzbuzz.c  fizzbuzz.h  herman.c  herman.h  knapsack.h  ladder.c  ladder.h  meson.build  modulo.c  modulo.h  nasty_hacks.c  nasty_hacks.h  number_fun.c  number_fun.h  oddities.c  oddities.h  planina.c  pot.c  quadrant_selection.c  quick_brown_fox.c  quick_brown_fox.h  r2.c  r2.h  stuck_in_a_time_loop.c  stuck_in_a_time_loop.h  take_two_stones.c  take_two_stones.h  tarifa.c  (+7 more)
src/open_kattis/autori/: autori-test.c  autori.h  meson.build
src/open_kattis/batter_up/: batter_up.c  meson.build
src/open_kattis/fizzbuzz/: meson.build
src/open_kattis/herman/: herman.c  meson.build
src/open_kattis/planina/: meson.build  planina.c  planina.h
src/open_kattis/pot/: meson.build  pot-test.c  pot.c  pot.h
src/open_kattis/reversed_binary_numbers/: meson.build  reversed_binary_numbers-test.c  reversed_binary_numbers.c  reversed_binary_numbers.h
src/open_kattis/take_two_stones/: meson.build  take_two_stones-test.c
src/open_kattis/to_lower/: meson.build  to_lower-test.c
src/tlx_toki/: meson.build  perang_dunia_ketiga.c  perang_dunia_ketiga.h  restoran_chanek.c  restoran_chanek.h
src/tlx_toki/perang_dunia_ketiga/: meson.build  perang_dunia_ketiga-test.c  perang_dunia_ketiga.c  perang_dunia_ketiga.h
src/tlx_toki/restoran_chanek/: meson.build
tests/: meson.build
tests/advent_of_code/: meson.build  rocket_equation_test.c
tests/codewars/: alternate_case_test.c  consecutive_strings_test.c  how_much_test.c  maximum_length_difference_test.c  meson.build  n-th_power_test.c  reverse_list_recursively_test.c  string_repeat_test.c  who_likes_it_test.c
tests/hacker_rank/: counting_valleys_test.c  meson.build  prime_or_not_test.c
tests/leetcode/: add_two_numbers_test.c  longest_substring_test.c  meson.build  reverse_integer_test.c
tests/open_kattis/: autori-test.c  batter_up-test.c  batter_up_test.c  bijele-test.c  cold_puter_science-test.c  death_knight_hero-test.c  faktor-test.c  fizzbuzz-test.c  herman-test.c  ladder-test.c  meson.build  modulo-test.c  modulo_test.c  nasty_hacks-test.c  number_fun-test.c  number_fun_test.c  oddities-test.c  planina-test.c  quadrant_selection-test.c  quick_brown_fox-test.c  quick_brown_fox_test.c  r2-test.c  reversed_binary_numbers-test.c  stuck_in_a_time_loop-test.c  tarifa-test.c  to_lower-test.c  trik-test.c  zamka-test.c
tests/tlx_toki/: meson.build  restoran_chanek-test.c
tlx_toki/: meson.build  perang_dunia_ketiga.h  perang_dunia_ketiga_test.c  restoran_chanek.c  restoran_chanek.h  restoran_chanek_test.c
(+4 files in other folders)
