report_repair_test = executable('report_repair_test',
    sources: [
        'report_repair.c',
        'report_repair_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('advent_of_code report_repair', report_repair_test)

rocket_equation_test = executable('rocket_equation_test',
    sources: [
        'rocket_equation.c',
        'rocket_equation_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('advent_of_code rocket_equation', rocket_equation_test)

not_quite_lisp_test = executable('not_quite_lisp_test',
    sources: [
        'not_quite_lisp.c',
        'not_quite_lisp_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('advent_of_code not_quite_lisp', not_quite_lisp_test)

there_would_be_no_math_test = executable('there_would_be_no_math_test',
    sources: [
        'there_would_be_no_math.c',
        'there_would_be_no_math_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('advent_of_code there_would_be_no_math', there_would_be_no_math_test)
