alternate_case_test = executable('alternate_case_test',
    sources: [
        'alternate_case.c',
        'alternate_case_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars alternate_case', alternate_case_test)

bouncing_balls_test = executable('bouncing_balls_test',
    sources: [
        'bouncing_balls.c',
        'bouncing_balls_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars bouncing_balls', bouncing_balls_test)

consecutive_strings_test = executable('consecutive_strings_test',
    sources: [
        'consecutive_strings.c',
        'consecutive_strings_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars consecutive_strings', consecutive_strings_test)

how_much_test = executable('how_much_test',
    sources: [
        'how_much.c',
        'how_much_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars how_much', how_much_test)

maximum_length_difference_test = executable('maximum_length_difference_test',
    sources: [
        'maximum_length_difference.c',
        'maximum_length_difference_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars maximum_length_difference', maximum_length_difference_test)

n_th_power_test = executable('n-th_power_test',
    sources: [
        'n-th_power.c',
        'n-th_power_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('codewars n-th_power', n_th_power_test)

ones_and_zeros_test = executable('ones_and_zeros_test',
    sources: [
        'ones_and_zeros.c',
        'ones_and_zeros_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('codewars ones_and_zeros', ones_and_zeros_test)

reverse_list_recursively_test = executable('reverse_list_recursively_test',
    sources: [
        'reverse_list_recursively.c',
        'reverse_list_recursively_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars reverse_list_recursively', reverse_list_recursively_test)

sorted_yes_no_how_test = executable('sorted_yes_no_how_test',
    sources: [
        'sorted_yes_no_how.c',
        'sorted_yes_no_how_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars sorted_yes_no_how', sorted_yes_no_how_test)

string_repeat_test = executable('string_repeat_test',
    sources: [
        'string_repeat.c',
        'string_repeat_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars string_repeat', string_repeat_test)

who_likes_it_test = executable('who_likes_it_test',
    sources: [
        'who_likes_it.c',
        'who_likes_it_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('codewars who_likes_it', who_likes_it_test)
