counting_valleys_test = executable('counting_valleys_test',
    sources: [
        'counting_valleys.c',
        'counting_valleys_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('hacker_rank counting_valleys', counting_valleys_test)

prime_or_not_test = executable('prime_or_not_test',
    sources: [
        'prime_or_not.c',
        'prime_or_not_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('hacker_rank prime_or_not', prime_or_not_test)
