add_two_numbers_test = executable('add_two_numbers_test',
    sources: [
        'add_two_numbers.c',
        'add_two_numbers_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode add_two_numbers', add_two_numbers_test)

longest_substring_test = executable('longest_substring_test',
    sources: [
        'longest_substring.c',
        'longest_substring_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode longest_substring', longest_substring_test)

reverse_integer_test = executable('reverse_integer_test',
    sources: [
        'reverse_integer.c',
        'reverse_integer_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode reverse_integer', reverse_integer_test)

string_to_integer_test = executable('string_to_integer_test',
    sources: [
        'string_to_integer.c',
        'string_to_integer_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode string_to_integer', string_to_integer_test)
