add_two_numbers_test = executable('add_two_numbers_test',
    sources: [
        'add_two_numbers.c',
        'add_two_numbers_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode add_two_numbers', add_two_numbers_test)

best_time_to_buy_and_sell_stock_test = executable('best_time_to_buy_and_sell_stock_test',
    sources: [
        'best_time_to_buy_and_sell_stock.c',
        'best_time_to_buy_and_sell_stock_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode best_time_to_buy_and_sell_stock', best_time_to_buy_and_sell_stock_test)

first_bad_version_test = executable('first_bad_version_test',
    sources: [
        'first_bad_version.c',
        'first_bad_version_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode first_bad_version', first_bad_version_test)

flood_fill_test = executable('flood_fill_test',
    sources: [
        'flood_fill.c',
        'flood_fill_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode flood_fill', flood_fill_test)

longest_substring_test = executable('longest_substring_test',
    sources: [
        'longest_substring.c',
        'longest_substring_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode longest_substring', longest_substring_test)

merge_two_sorted_lists_test = executable('merge_two_sorted_lists_test',
    sources: [
        'merge_two_sorted_lists.c',
        'merge_two_sorted_lists_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode merge_two_sorted_lists', merge_two_sorted_lists_test)

number_of_islands_test = executable('number_of_islands_test',
    sources: [
        'number_of_islands.c',
        'number_of_islands_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode number_of_islands', number_of_islands_test)

palindrome_number_test = executable('palindrome_number_test',
    sources: [
        'palindrome_number.c',
        'palindrome_number_test.c'
    ],
    dependencies: [cmocka_dep],
)

test('leetcode palindrome_number', palindrome_number_test)

reverse_integer_test = executable('reverse_integer_test',
    sources: [
        'reverse_integer.c',
        'reverse_integer_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode reverse_integer', reverse_integer_test)

reverse_linked_list_test = executable('reverse_linked_list_test',
    sources: [
        'reverse_linked_list.c',
        'reverse_linked_list_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode reverse_linked_list', reverse_linked_list_test)

string_to_integer_test = executable('string_to_integer_test',
    sources: [
        'string_to_integer.c',
        'string_to_integer_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('leetcode string_to_integer', string_to_integer_test)
