autori_test = executable('autori_test',
    sources: [
        'autori.c',
        'autori_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis autori', autori_test)

batter_up_test = executable('batter_up_test',
    sources: [
        'batter_up.c',
        'batter_up_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis batter_up', batter_up_test)

bijele_test = executable('bijele_test',
    sources: [
        'bijele.c',
        'bijele_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis bijele', bijele_test)

cold_puter_science_test = executable('cold_puter_science_test',
    sources: [
        'cold_puter_science.c',
        'cold_puter_science_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis cold_puter_science', cold_puter_science_test)

death_knight_hero_test = executable('death_knight_hero_test',
    sources: [
        'death_knight_hero.c',
        'death_knight_hero_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis death_knight_hero', death_knight_hero_test)

faktor_test = executable('faktor_test',
    sources: [
        'faktor.c',
        'faktor_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis faktor', faktor_test)

fizzbuzz_test = executable('fizzbuzz_test',
    sources: [
        'fizzbuzz.c',
        'fizzbuzz_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis fizzbuzz', fizzbuzz_test)

ladder_test = executable('ladder_test',
    sources: [
        'ladder.c',
        'ladder_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('open_kattis ladder', ladder_test)

modulo_test = executable('modulo_test',
    sources: [
        'modulo.c',
        'modulo_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis modulo', modulo_test)

nasty_hacks_test = executable('nasty_hacks_test',
    sources: [
        'nasty_hacks.c',
        'nasty_hacks_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis nasty_hacks', nasty_hacks_test)

herman_test = executable('herman_test',
    sources: [
        'herman.c',
        'herman_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis herman', herman_test)

knapsack_test = executable('knapsack_test',
    sources: [
        'knapsack.c',
        'knapsack_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('open_kattis knapsack', knapsack_test)

number_fun_test = executable('number_fun_test',
    sources: [
        'number_fun.c',
        'number_fun_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis number_fun', number_fun_test)

oddities_test = executable('oddities_test',
    sources: [
        'oddities.c',
        'oddities_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis oddities', oddities_test)

planina_test = executable('planina_test',
    sources: [
        'planina.c',
        'planina_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('open_kattis planina', planina_test)

pot_test = executable('pot_test',
    sources: [
        'pot.c',
        'pot_test.c',
    ],
    dependencies: [m_dep, cmocka_dep],
)

test('open_kattis pot', pot_test)

quadrant_selection_test = executable('quadrant_selection_test',
    sources: [
        'quadrant_selection.c',
        'quadrant_selection_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis quadrant_selection', quadrant_selection_test)

r2_test = executable('r2_test',
    sources: [
        'r2.c',
        'r2_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis r2', r2_test)

quick_brown_fox_test = executable('quick_brown_fox_test',
    sources: [
        'quick_brown_fox.c',
        'quick_brown_fox_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis quick_brown_fox', quick_brown_fox_test)

reversed_binary_numbers_test = executable('reversed_binary_numbers_test',
    sources: [
        'reversed_binary_numbers.c',
        'reversed_binary_numbers_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis reversed_binary_numbers', reversed_binary_numbers_test)

stuck_in_a_time_loop_test = executable('stuck_in_a_time_loop_test',
    sources: [
        'stuck_in_a_time_loop.c',
        'stuck_in_a_time_loop_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis stuck_in_a_time_loop', stuck_in_a_time_loop_test)

take_two_stones_test = executable('take_two_stones_test',
    sources: [
        'take_two_stones.c',
        'take_two_stones_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis take_two_stones', take_two_stones_test)

tarifa_test = executable('tarifa_test',
    sources: [
        'tarifa.c',
        'tarifa_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis tarifa', tarifa_test)

to_lower_test = executable('to_lower_test',
    sources: [
        'to_lower.c',
        'to_lower_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis to_lower', to_lower_test)

trik_test = executable('trik_test',
    sources: [
        'trik.c',
        'trik_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis trik', trik_test)

zamka_test = executable('zamka_test',
    sources: [
        'zamka.c',
        'zamka_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('open_kattis zamka', zamka_test)
