perang_dunia_ketiga_test = executable('perang_dunia_ketiga_test',
    sources: [
        'perang_dunia_ketiga.c',
        'perang_dunia_ketiga_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('tlx_toki perang_dunia_ketiga', perang_dunia_ketiga_test)

restoran_chanek_test = executable('restoran_chanek_test',
    sources: [
        'restoran_chanek.c',
        'restoran_chanek_test.c',
    ],
    dependencies: [cmocka_dep],
)

test('tlx_toki restoran_chanek', restoran_chanek_test)
