includes = include_directories('.')

lib_autori = library('autori',
    sources: 'autori.c')

dep_autori = declare_dependency(
    link_with: lib_autori,
    include_directories: includes)

lib_batter_up = library('batter_up',
    sources: 'batter_up.c',
    dependencies: dep_m)

dep_batter_up = declare_dependency(
    link_with: lib_batter_up,
    include_directories: includes)

lib_fizzbuzz = library('fizzbuzz',
    sources: 'fizzbuzz.c')

dep_fizzbuzz = declare_dependency(
    link_with: lib_fizzbuzz,
    include_directories: includes)

lib_herman = library('herman',
    sources: 'herman.c',
    dependencies: dep_m)

dep_herman = declare_dependency(
    link_with: lib_herman,
    include_directories: includes)

lib_planina = library('planina',
    sources: 'planina.c',
    dependencies: dep_m)

dep_planina = declare_dependency(
    link_with: lib_planina,
    include_directories: includes)

lib_pot = library('pot',
    sources: 'pot.c',
    dependencies: dep_m)

dep_pot = declare_dependency(
    link_with: lib_pot,
    include_directories: includes)

lib_reversed_binary_numbers = library('reversed_binary_numbers',
    sources: 'reversed_binary_numbers.c',
    dependencies: dep_m)

dep_reversed_binary_numbers = declare_dependency(
    link_with: lib_reversed_binary_numbers,
    include_directories: includes)

lib_take_two_stones = library('take_two_stones',
    sources: 'take_two_stones.c')

dep_take_two_stones = declare_dependency(
    link_with: lib_take_two_stones,
    include_directories: includes)

lib_to_lower = library('to_lower',
    sources: 'to_lower.c')

dep_to_lower = declare_dependency(
    link_with: lib_to_lower,
    include_directories: includes)
